# BattleSpades

./: .dockerignore  .gitignore  BattleSpades.spec  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  config.toml  harness.py  pytest.ini  requirements-release.txt  requirements.txt  run_map_creator.py  run_server.py  run_tutorial.py  setup.py
aoslib/: __init__.py  constants.py  glm.pxd  glm.pyx  packet.pyx  vxl.pxd  vxl.pyx  vxl_c.cpp  vxl_c.h  world.pyx
client_patches/: INSTALL.txt  character_jump_smoothing.py  clipboard_input_patch.py  parachute_key_patch.py  session_transition_patch.py
commands/: __init__.py  admin.py  command_handler.py  player.py  server_commands.py
deploy/: .env.example  a2s_probe.py  docker-compose.example.yml  register_server.py  rollout.sh
docs/: ADMIN_GUIDE.md  ARCHITECTURE.md  BUILDING.md  CONTAINER_DEPLOYMENT.md  CONTENT_REPLICATION_ROADMAP.md  CONTENT_TABLES.md  ENGINEERING_NOTES.md  GAMEPLAY.md  GOAL.md  HANDOFF.md  NETCODE_RECONCILIATION.md  OWNER_ANCHOR_AB_FINDINGS.md  PHYSICS_CALIBRATION.md  PROBE_FINDINGS.md  PROJECT_MAP.md  PROTOCOL.md  RELEASING.md  REPLICATION_IDA_FINDINGS.md  ROADMAP.md  RUNBOOK.md  SERVER_PERFORMANCE.md  TEST_HARNESS.md
maps/: .gitkeep  20thCenturyTown.json  ArcticBase.json  CastleWars.json  CityOfChicago.json  DragonIsland.json  MayanJungle.json  SpookyMansion.json  Trenches.json
modes/: __init__.py  arena.py  base_mode.py  classic_ctf.py  ctf.py  lobby_skeletons.py  tdm.py  tutorial.py  ugc.py  vip.py  zombie.py
plugins/: __init__.py  (+2 more)
tools/steam_bridge/: CMakeLists.txt  steam_bridge.cpp
(+280 files in other folders)
